src/objects/Substance_Use__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Client__c</fullName>
        <label>Detox Client</label>
        <referenceTo>Detox_Client__c</referenceTo>
        <relationshipName>Drug_Uses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>If_other_substance_please_state__c</fullName>
        <label>If other substance, please state</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_time__c</fullName>
        <label>Length of time</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prescribed__c</fullName>
        <label>Prescribed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substance__c</fullName>
        <label>Substance</label>
        <picklist>
            <picklistValues>
                <fullName>Heroin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non prescribed Benzodiazepine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed Benzodiazepine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine/Crack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non prescribed Zimovane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed Zimovane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non prescribed Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed Methadone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mephedrone (Snow Blow)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lsd/Acid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other sedatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methamphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Substance Use</label>
    <nameField>
        <displayFormat>SU-{000000}</displayFormat>
        <label>SU Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substances Uses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>